# Don Ramón - Semantic code search for AI agents
# Copyright (c) 2026 Julian Orcinoli
# Licensed under PolyForm Noncommercial 1.0.0
# See LICENSE file for details

[project]
name = "don-ramon"
version = "0.1.0"
description = "The wise neighbor of your codebase. Semantic search MCP server for Python/Django repos."
authors = [{ name = "Julian Orcinoli", email = "orcinoli@gmail.com" }]
license = { text = "PolyForm Noncommercial 1.0.0" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
dr = "don_ramon.cli:app"
don-ramon = "don_ramon.cli:app"
cidx = "don_ramon.cli:cidx_deprecated"

[tool.hatch.build.targets.wheel]
packages = ["don_ramon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
